udpate config template

--- a/config.template.yml
+++ b/config.template.yml
@@ -1,6 +1,6 @@
 api:
   # 必填
-  cookie: "xx"
+  cookie: ""
   # 选填
   ua: "Mozilla/5.0 (iPhone; CPU iPhone OS 11_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E217 MicroMessenger/6.8.0(0x16080000) NetType/WIFI Language/en Branch/Br_trunk MiniProgramEnv/Mac"
   # 必填
