--- a/config.template.yml
+++ b/config.template.yml
@@ -16,6 +16,8 @@ api:
 cart_interval: "2m"
 # 检查运力的间隔，过短会导致被风控
 reserve_interval: "2s"
+# 选中地址index,-1为默认地址
+address_index: -1
 
 # 早上抢货专用，可适当设置较小的间隔
 boost_mode:
